crates/tirea-state-derive/tests/ui/derive_lattice_unit_struct.rs
use tirea_state_derive::Lattice;

#[derive(Clone, PartialEq, Lattice)]
struct Bad;

fn main() {}
